Fixed overflow issue at certain dimensions

--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -357,7 +357,7 @@ footer {
 #lead {
     position: relative;
     height: 100vh;
-    min-height: 500px;
+    min-height: 740px;
     max-height: 1080px;
     background: url(../files/lead-bg.jpg);
     background-size: cover;
@@ -380,7 +380,7 @@ footer {
     h1 {
         color: #fff;
         font-weight: 900;
-        font-size: 5em;
+        font-size: 3.5em;
         text-transform: uppercase;
         letter-spacing: 0.05em;
         line-height: 0.9em;
@@ -501,7 +501,7 @@ footer {
         background: $base-color;
         z-index: 0;
     }
-
+f
     &:after {
         position: absolute;
         content: '';
@@ -842,7 +842,7 @@ footer {
         top: auto;
 
         h1 {
-            font-size: 3em;
+            font-size: 2.5em;
         }
 
         h2 {
